--- a/index.html
+++ b/index.html
@@ -8,14 +8,37 @@
 
     <!-- Add CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/slick.css"/>
+    <link rel="stylesheet" href="css/slick-theme.css">
 
     <!-- Add JS -->
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/slick.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
       <!-- Header -->
-      <div class="header"></div>
+      <div class="header">
+        <div class="container">
+          <div class="header-inner">
+            <div class="logo">
+              <img src="img/Logo.png" alt="">
+            </div>
+          </div>
+          <div class="header-menu">
+            <nav>
+              <ul class="navbar">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Classes</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contacts</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
       <!-- End Header -->
       <!-- Menu -->
       <div class="navbar" id="menu"></div>
