--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
       <!-- Header -->
       <div class="header">
         <div class="container">
-          <div class="header-inner">
-            <div class="logo">
-              <img src="img/Logo.png" alt="">
-            </div>
-          </div>
+          <!-- Logo -->
+          <div class="header-logo"><img src="img/Logo.png" alt=""></div>
+          <!-- End Logo -->
+          <!-- Header Menu -->
           <div class="header-menu">
             <nav>
               <ul class="navbar">
@@ -37,16 +36,33 @@
               </ul>
             </nav>
           </div>
+          <div class="header-icon">
+            <div class="item-search"><i class="fas fa-search"></i></div>
+            <div class="item-cart"><i class="fas fa-shopping-bag"></i></div>
+            <div class="item-person"><i class="fas fa-person"></i></div>
+          </div>
         </div>
       </div>
       <!-- End Header -->
-      <!-- Menu -->
-      <div class="navbar" id="menu"></div>
-      <!-- End Menu -->
       <!-- Main Content -->
       <div class="main-content">
         <!-- Slider -->
-        <div class="slider"></div>
+        <div class="slider">
+          <div class="slider-top">
+            <img src="img/Banner_01.png" alt="">
+            <div class="slider-content">
+              <div class="row">
+                <div class="slider-content-inner">
+                  <div class="slider-title">Dumbbells Shop</div>
+                  <div class="slider-name"> Best body fitness</div>
+                  <div class="slider-summary">Lorem Ipsum is simply dummy text of the printing and typesetting insdustry.
+                  <br>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when unknown printer.</div>
+                  <div class="slide-bnt"><button type="submit">Shop Now</button></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- End Slider -->
         <!-- Container -->
         <div class="container"></div>
