AHT Update Code

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
 
-    <!--  Listing -->
+    <!--  Listing Product-->
     <div class="listing">
         <div class="name-content">
           <nav class="site-nav">
@@ -170,8 +170,7 @@
         </div>
           <div class="main-listing">
             <div class="list-item">
-              <div class="card">
-                <div class="img-product">
+                <div class="info-product">
                   <img src="./img/product-1.png" />
                   <div class="product-icon">
                     <a class="btn-hover"><i class="fas fa-shopping-basket"></i></a>
@@ -185,9 +184,7 @@
                     </div>
                     <div class="price-rating"><b>$342.00</b></div></div>
                 </div>
-              </div>
-              <div class="card">
-                <div class="img-product">
+                <div class="info-product">
                   <img src="./img/product-2.png" />
                   <div class="product-icon">
                     <a class="btn-hover"><i class="fas fa-shopping-basket"></i></a>
@@ -201,9 +198,7 @@
                     </div>
                     <div class="price-rating"><b>$214.00</b></div></div>
                 </div>
-              </div>
-              <div class="card">
-                <div class="img-product">
+                <div class="info-product">
                   <img src="./img/product-3.png" />
                   <div class="product-icon">
                     <a class="btn-hover"><i class="fas fa-shopping-basket"></i></a>
@@ -217,9 +212,7 @@
                     </div>
                     <div class="price-rating"><b>$421.00</b></div></div>
                 </div>
-              </div>
-              <div class="card">
-                <div class="img-product">
+                <div class="info-product">
                   <img src="./img/product-4.png" />
                   <div class="product-icon">
                     <a class="btn-hover"><i class="fas fa-shopping-basket"></i></a>
@@ -233,9 +226,7 @@
                     </div>
                     <div class="price-rating"><b>$152.00</b></div></div>
                 </div>
-              </div>
-              <div class="card">
-                <div class="img-product">
+                <div class="info-product">
                   <img src="./img/product-5.png" />
                   <div class="product-icon">
                     <a class="btn-hover"><i class="fas fa-shopping-basket"></i></a>
@@ -249,9 +240,7 @@
                     </div>
                     <div class="price-rating"><b>$252.00</b></div></div>
                 </div>
-              </div>
-              <div class="card">
-                <div class="img-product">
+                <div class="info-product">
                   <img src="./img/product-6.png" />
                   <div class="product-icon">
                     <a class="btn-hover"><i class="fas fa-shopping-basket"></i></a>
@@ -265,9 +254,7 @@
                     </div>
                     <div class="price-rating"><b>$412.00</b></div></div>
                 </div>
-              </div>
-              <div class="card">
-                <div class="img-product">
+                <div class="info-product">
                   <img src="./img/product-7.png" />
                   <div class="product-icon">
                     <a class="btn-hover"><i class="fas fa-shopping-basket"></i></a>
@@ -281,9 +268,7 @@
                     </div>
                     <div class="price-rating"><b>$300.00</b></div></div>
                 </div>
-              </div>
-              <div class="card">
-                <div class="img-product">
+                <div class="info-product">
                   <img src="./img/product-8.png" />
                   <div class="product-icon">
                     <a class="btn-hover"><i class="fas fa-shopping-basket"></i></a>
@@ -295,15 +280,30 @@
                     <div class="productName">
                       <span>Fitness Gear Pro</span>
                     </div>
-                    <div class="price-rating"><b>124.00</b></div></div>
+                    <div class="price-rating"><b>124.00</b></div>
                 </div>
-              </div>
-            </div>
-          </div>
+              </div> 
         </div>
       </div>
-      <!-- End Listing -->
-    </main>
+    </div>
+    <!-- End Listing -->
+  </main>
+  <!-- End Main Cotent -->
+
+
+
+       <!-- About US -->
+       <div class="about-us">
+         <h1>See What They Said About Us</h1>
+         <img src="img/image-person.png" alt="">
+         <p>“Good  services. I bought a bicycle with a wrong but they accepted free return for me and exchange a new product for me.</p>
+         <h4>Lina</h4>
+         <span>Happy clients</span>
+       </div>
+    </div>
+
+
+     
     <!-- End Main Content -->
 
         <!-- Footer -->
