AHT Update Code

--- a/index.html
+++ b/index.html
@@ -372,37 +372,63 @@
         <div class="contact-us">
           <h4>Contact Us</h4>
           <ul>
-            <li class="contact-info">
+            <li>
               <i class="fas fa-map-marker-alt"></i>
               <span class="info">200 Lincoln Ave, Sanilas, CA 93901</span>
             </li>
 
-            <li class="contact-info">
+            <li>
               <i class="fas fa-phone-alt info-icon"></i>
               <span>023 32423 223</span>
             </li>
 
-            <li class="contact-info">
+            <li>
               <i class="far fa-envelope info-icon"></i>
               <span>gymax@example.com</span>
             </li>
 
-            <li class="contact-info">
+            <li>
               <i class="fas fa-clock"></i>
               <span>9:00-20:00 All day</span>
             </li>
+
           </ul>
         </div>
-        <div class="my-account"></div>
-        <div class="infomation"></div>
-        <div class="quick-link"></div>
+        <div class="my-account">
+          <h4>My Account</h4>
+          <ul>
+            <li>My account</li>
+            <li>Check out</li>
+            <li>Register</li>
+            <li>Login</li>
+          </ul>
+        </div>
+        <div class="infomation">
+          <h4>Infomation</h4>
+          <ul>
+            <li>About us</li>
+            <li>Contact us</li>
+            <li>Terms of user</li>
+            <li>Privacy Policy</li>
+          </ul>
+        </div>
+        <div class="quick-link">
+          <h4>Quick Link</h4>
+          <ul>
+            <li>New user</li>
+            <li>Help center</li>
+            <li>Report spam</li>
+            <li>FAQs</li>
+          </ul>
+        </div>
       </div>
       <!-- End Footer Contents -->
 
 
       <!-- Copyright -->
       <div class="copyright">
-
+        <p>Copyright © 2019 Gymax - Design by ArrowHitech - All Rights Reserved
+        </p>
       </div>
       <!-- End Copyright -->
 
